[project]
name = "general_flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.4.1",
  "pandas>=1.1.4",
  "scikit-learn==1.0.2",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "h5py==3.6.0",
  "tqdm>=4.64.0",
  "isaacsim[all,extscache]==4.5.0",
  "isaaclab",
  "isaaclab_assets",
  "isaaclab_mimic",
  "isaaclab_rl[rsl-rl]",
  "isaaclab_tasks",
  "clip",
  "gradio==3.35.2",
  "dash==2.14.1",
  "open3d==0.17.0",
  "pyvista==0.42.3",
  "ultralytics==8.0.120",
  "transformers==4.35.2",
  "timm==0.9.12",
  "wandb==0.16.0",
  "pytorch-lightning==0.7.1",
  "matplotlib==3.7.0",
  "seaborn>=0.11.0",
  "opencv-python>=4.6.0",
  "pyqt6>=6.9.1",
  "mkdocs==1.5.3",
  "mkdocs-awesome-pages-plugin==2.9.2",
  "mkdocs-material==9.4.8",
  "yapf==0.40.2",
  "gdown>=5.0.0",
  "flow-vis==0.1",
  "mmcls==0.25.0",
  "openmim==0.3.9",
  "pascal-voc-writer==0.1.4",
  "pickleshare==0.7.5",
  "plyfile==1.0.1",
  "pynvml==11.5.0",
  "shortuuid==1.0.11",
  "tensorboardx==2.6.2.2",
  "termcolor==1.1.0",
  "tifffile==2023.9.26",
  "multimethod>=2.0",
  "easydict>=1.13",
  "hydra-core>=0.11.3",
  "scikit-image>=0.25.2",
  "pytorch3d",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
torch = { index = "pytorch" }
isaacsim = { index = "nvidia" }
isaaclab = { path = "IsaacLab/source/isaaclab", editable = true }
isaaclab_assets = { path = "IsaacLab/source/isaaclab_assets", editable = true }
isaaclab_mimic = { path = "IsaacLab/source/isaaclab_mimic", editable = true }
isaaclab_rl = { path = "IsaacLab/source/isaaclab_rl", editable = true }
isaaclab_tasks = { path = "IsaacLab/source/isaaclab_tasks", editable = true }
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
  "isaaclab",
  "isaaclab_assets",
  "isaaclab_mimic",
  "isaaclab_rl",
  "isaaclab_tasks",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Linux"
extraPaths = [
  "IsaacLab/source/isaaclab",
  "IsaacLab/source/isaaclab_assets",
  "IsaacLab/source/isaaclab_mimic",
  "IsaacLab/source/isaaclab_rl",
  "IsaacLab/source/isaaclab_tasks",
]

reportMissingImports = "none"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "warning"
reportPrivateUsage = "warning"
